--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -2,7 +2,7 @@
 
 div {
     color:white;
-    background-color: black;
+    background-color: red;
     font-size: 32px;
     text-align: center;
     font-weight: bold;
