--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -3,16 +3,16 @@
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
-  font-size: 14px;
-}
-
 .para {
   font-size: 22px;
 }
 
+.small-para {
+  font-size: 14px;
+}
+
 .confirm {
-  background: green;
+  
   color: white;
   font-weight: bold;
 } 
@@ -23,7 +23,7 @@
   font-size: 20px;
 }
 
-.child {
+.text .child {
   color: red;
   font-size: 14px;
 }
@@ -31,4 +31,8 @@
 div.text {
   color: green;
   font-size: 22px;
+}
+
+#confirm-button {
+  background-color: green;
 }
