--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,16 +1,30 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+  
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 52px;
+}
+
+.info{
+  max-width: 200px;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
-}
+  margin-bottom: 32px;
+  }
 
 /* do not edit this footer */
 .footer {
@@ -24,3 +38,4 @@ img {
   justify-content: center;
   background: #eee;
 }
+
