--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -9,17 +10,28 @@ body {
   margin: 0;
   background: #aaa;
   color: #333;
-  /* I'll give you this one for free lol */
+  /* I'll give you this one for free */
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+  
+
+
+
+
+
+
 }
 
 .icon {
@@ -33,6 +45,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  padding: 5px;
+
 }
 
 .close-button {
@@ -46,21 +61,58 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+
 }
 
 button {
   padding: 8px 16px;
   border-radius: 8px;
+
 }
 
 button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+
 }
 
 button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  
+
+}
+
+.header {
+  display: flex;
+  align-items: flex-start;
+  font-size: large;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-left: 10px;
+  
+}
+
+.column-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.button-container {
+  display: flex;
+}
+
+.text {
+  margin-bottom: 10px;
 }
