--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,93 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  flex-direction: column;
+  display: flex;
+  overflow: hidden;
+  
 }
 
-.header {
-  height: 72px;
-  background: darkmagenta;
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
   color: white;
 }
 
+ul {
+   
+    text-decoration: none;
+  
+}
+
+li {
+  text-decoration: none;
+}
+
+
+
+.header {
+
+  background: darkmagenta;
+  color: white;
+  font-size: 32px;
+  font-weight: 900;
+  flex: 0 0 72px;
+  align-items: center;
+  display: flex;
+  
+  
+}
+
 .footer {
-  height: 72px;
   background: #eee;
   color: darkmagenta;
+  flex: 0 0 72px;
+  height: 72px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  }
+
+.container {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  
+  
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex-shrink: 0;
+  color: white;
+  font-size: 24px;
+  text-decoration: none;
+  padding: 16px;
+  
+
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
   border-radius: 4px;
+
+  width: 300px;
+  padding: 32px;
+  margin-bottom: 2%;
+}
+
+
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  flex: 1 1;
+  padding: 10px;
+}
+
+.header-text {
+  margin-left: 16px;
 }
